# job-companion

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_magic_link_tokens.py  0003_ai_call_log.py  0004_master_resume_and_cards.py  0005_intake_session.py  0006_application_jobposting.py  0007_application_resource_link.py  0008_resume_branch.py  0009_resources.py  0010_investment.py  (+2 more)
apps/api/job_companion_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/src/: main.py
apps/api/tests/: conftest.py  test_ai_call_log.py  test_application_api.py  test_application_models.py  test_card_crud.py  test_coach_api.py  test_coach_inquiry_model.py  test_config.py  test_guest.py  test_health.py  test_health_ai.py  test_intake.py  test_internal_auth.py  test_internal_dashboard.py  test_investment_api.py  test_investment_model.py  test_jd_parser.py  test_json_parse.py  test_jwt.py  test_llm_client.py  test_magic_link.py  test_master_resume_api.py  test_me_endpoint.py  test_notifier.py  test_patch_generator.py  test_patch_ops.py  test_pdf_renderer.py  test_quality_diagnoser.py  test_resource_api.py  test_resource_models.py  test_resource_processor.py  test_resume_branch_api.py  test_resume_branch_model.py  test_resume_models.py  test_resume_parser.py  test_resume_scorer.py  test_scheduler.py  test_security.py  test_sentry_init.py  test_storage.py  (+9 more)
(+214 files in other folders)
