[project]
name = "job-companion-api"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.4",
  "uvicorn[standard]>=0.32.0",
  "pydantic[email]>=2.11",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.3",
  "psycopg[binary]>=3.2.4",
  "redis>=5.2.0",
  "httpx>=0.27.2",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "cryptography>=43.0.3",
  "litellm>=1.51.0",
  "sentry-sdk[fastapi]>=2.17.0",
  "posthog>=3.7.0",
  "boto3>=1.35.50",
  "pypdfium2>=4.30.0",
  "python-docx>=1.1.2",
  "jinja2>=3.1.4",
  "weasyprint>=62.3",
  "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.1",
  "mypy>=1.13.0",
  "types-python-jose>=3.3",
  "boto3-stubs[s3]>=1.35",
]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 依赖注入用调用作默认值，是官方惯例，豁免 B008
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Cookie", "fastapi.Header"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[[tool.mypy.overrides]]
# 这些第三方库没有类型存根
module = ["pypdfium2.*", "docx.*", "weasyprint.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
